Hatt changelog
==============

Version 1.1
-----------

* Allow variables to be lower case ASCII letters as well as upper case.

Version 1.0
-----------

* Pretty-printing can now be enabled and disabled when in the interactive mode
  by using the `pretty` command.

Version 0.3
-----------

* Added an interactive mode.
* Made interactive mode the default: it's only not entered if the `--evaluate`
  flag is passed and the `--interactive` flag is not.

Version 0.2
-----------

* Added the `--pretty` option to pretty-print expressions.
* The `--evaluate` option now prints ASCII truth tables by default.
* Added `truthTableP` function to allow configurable expression printing.
* The `variables` function now returns a list of unique elements.
* Dependency `base` loosened to >= 4 && < 5 so it will build with GHC 7.
* Exposed and other modules now correctly differentiated in cabal file.

Version 0.1
-----------

* Initial release.