@@ -1,6 +1,11 @@
 Hatt changelog
 ==============
 
+Next
+----
+
+* Allow nesting of parentheses around binary expressions.
+
 Version 1.1
 -----------
 
